fix: show hamburger button on mobile devices
using custom hook named usedevicedetector

--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -18,8 +18,7 @@
   background: transparent;
   z-index: 10;
 }
-.bodyWrapper > .bodyContent,
-.bodyWrapper > .bodyContentNoMargin {
+.bodyWrapper > .bodyContent, .bodyWrapper > .bodyContentNoMargin {
   margin: 0;
   width: 100%;
-} /*# sourceMappingURL=layout.module.css.map */
+}/*# sourceMappingURL=layout.module.css.map */
