--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -29,9 +29,8 @@
   height: 100%;
   padding-left: 20%;
 }
-.main > .homeContent > h1::after,
-.main > .homeContent > h2::after {
-  content: '';
+.main > .homeContent > h1::after, .main > .homeContent > h2::after {
+  content: "";
 }
 .main > .homeContent > h1 {
   font-size: 6rem;
@@ -93,7 +92,17 @@
   width: 100%;
   height: auto;
   -o-object-fit: contain;
-  object-fit: contain;
+     object-fit: contain;
+}
+@media (max-width: 768px) {
+  .main > #profileImageWrapper img {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  .main > #profileImageWrapper {
+    display: none;
+  }
 }
 @media (prefers-color-scheme: light) {
   .main > #profileImageWrapper {
@@ -103,7 +112,7 @@
 }
 @media (prefers-color-scheme: light) {
   .main {
-    background-image: url('/assets/images/home_background_light.jpg');
+    background-image: url("/assets/images/home_background_light.jpg");
   }
 }
 
@@ -158,7 +167,7 @@
     width: 250px;
     height: auto;
     -o-object-fit: contain;
-    object-fit: contain;
+       object-fit: contain;
   }
 }
 @media (max-width: 768px) {
@@ -179,16 +188,6 @@
   }
   .main > .homeContent > p {
     font-size: 0.8rem;
-  }
-  .main > #profileImageWrapper {
-    right: 0;
-    top: 0;
-    width: 200px;
-    height: auto;
-    z-index: 0;
-  }
-  .main > #profileImageWrapper img {
-    width: 200px;
   }
 }
 @media only screen and (max-width: 320px) {
@@ -211,16 +210,4 @@
   .main > .homeContent > p {
     font-size: 0.7rem;
   }
-  .main > #profileImageWrapper {
-    margin-top: 20px;
-    z-index: 0;
-  }
-  .main > #profileImageWrapper img {
-    width: 300px;
-    height: 300px;
-    max-width: 100%;
-    -o-object-fit: contain;
-    object-fit: contain;
-    margin: 0 auto;
-  }
-} /*# sourceMappingURL=page.module.css.map */
+}/*# sourceMappingURL=page.module.css.map */
