--- a/src/components/navbar/hamburgerButton/hamburgerButton.module.scss
+++ b/src/components/navbar/hamburgerButton/hamburgerButton.module.scss
@@ -29,7 +29,7 @@
       cursor: pointer;
 
       & > .hamburgerButtonLine {
-        background-color: vars.$color-primary;
+        background-color: vars.$color-light;
 
         &:nth-child(1) {
           width: 50px;
